--- a/index.html
+++ b/index.html
@@ -1,3 +1,58 @@
-<h1>Мяу!<h1>
-<h1>Мяу!<h1>
-  <h1>Мяу!<h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Text to Speech</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        background-color: #f0f0f0;
+    }
+    h1 {
+        color: #333;
+    }
+    textarea {
+        width: 80%;
+        height: 150px;
+        margin: 20px 0;
+        padding: 10px;
+        font-size: 16px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+    button {
+        padding: 10px 20px;
+        font-size: 16px;
+        color: #fff;
+        background-color: #007bff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    button:hover {
+        background-color: #0056b3;
+    }
+</style>
+</head>
+<body>
+<h1>Text to Speech</h1>
+<textarea id="text-input" placeholder="Enter text here..."></textarea>
+<button onclick="speak()">Speak</button>
+
+<script>
+    function speak() {
+        const text = document.getElementById('text-input').value;
+        const speech = new SpeechSynthesisUtterance(text);
+        window.speechSynthesis.speak(speech);
+    }
+</script>
+</body>
+</html>
