--- a/index.html
+++ b/index.html
@@ -3,56 +3,76 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Text to Speech</title>
+<title>Battle Bound</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        background-color: #f0f0f0;
-    }
-    h1 {
-        color: #333;
-    }
-    textarea {
-        width: 80%;
-        height: 150px;
-        margin: 20px 0;
-        padding: 10px;
-        font-size: 16px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
-    button {
-        padding: 10px 20px;
-        font-size: 16px;
-        color: #fff;
-        background-color: #007bff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    button:hover {
-        background-color: #0056b3;
-    }
+body {
+font-family: Arial, sans-serif;
+margin: 0;
+padding: 0;
+background-color: #f0f0f0;
+}
+header {
+background-color: #333;
+color: #fff;
+padding: 20px;
+text-align: center;
+}
+nav {
+display: flex;
+justify-content: center;
+background-color: #444;
+}
+nav a {
+color: #fff;
+padding: 14px 20px;
+text-decoration: none;
+text-align: center;
+}
+nav a:hover {
+background-color: #555;
+}
+main {
+padding: 20px;
+}
+section {
+margin-bottom: 20px;
+}
+footer {
+background-color: #333;
+color: #fff;
+text-align: center;
+padding: 10px;
+position: fixed;
+width: 100%;
+bottom: 0;
+}
 </style>
 </head>
 <body>
-<h1>Text to Speech</h1>
-<textarea id="text-input" placeholder="Enter text here..."></textarea>
-<button onclick="speak()">Speak</button>
-
-<script>
-    function speak() {
-        const text = document.getElementById('text-input').value;
-        const speech = new SpeechSynthesisUtterance(text);
-        window.speechSynthesis.speak(speech);
-    }
-</script>
+<header>
+<h1>Battle Bound</h1>
+</header>
+<nav>
+<a href="#home">Home</a>
+<a href="#about">About</a>
+<a href="#contact">Contact</a>
+</nav>
+<main>
+<section id="home">
+<h2>Welcome to Battle Bound</h2>
+<p>Explore the world of epic battles and adventures.</p>
+</section>
+<section id="about">
+<h2>About Us</h2>
+<p>Battle Bound is a platform for gamers to connect and compete in various games.</p>
+</section>
+<section id="contact">
+<h2>Contact Us</h2>
+<p>Email: info@battlebound.com</p>
+</section>
+</main>
+<footer>
+<p>&copy; 2024 Battle Bound. All rights reserved.</p>
+</footer>
 </body>
 </html>
