--- a/index.html
+++ b/index.html
@@ -3,37 +3,82 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TurboWarp Project</title>
+<title>Scratch</title>
 <style>
 body {
 font-family: Arial, sans-serif;
 margin: 0;
 padding: 0;
 background-color: #f0f0f0;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-height: 100vh;
 }
 header {
-background-color: #333;
+background-color: #4d97ff;
 color: #fff;
 padding: 20px;
-width: 100%;
 text-align: center;
 }
-iframe {
-border: none;
+nav {
+display: flex;
+justify-content: center;
+background-color: #3b82e3;
+padding: 10px 0;
+}
+nav a {
+color: #fff;
+padding: 10px 20px;
+text-decoration: none;
+text-align: center;
+}
+nav a:hover {
+background-color: #2a6bbf;
+}
+main {
+padding: 20px;
+}
+section {
+margin-bottom: 20px;
+}
+footer {
+background-color: #4d97ff;
+color: #fff;
+text-align: center;
+padding: 10px;
+position: fixed;
+width: 100%;
+bottom: 0;
 }
 </style>
 </head>
 <body>
 <header>
-<h1>TurboWarp Project</h1>
+<h1>Scratch</h1>
 </header>
+<nav>
+<a href="#home">Home</a>
+<a href="#create">Create</a>
+<a href="#explore">Explore</a>
+<a href="#about">About</a>
+</nav>
 <main>
-<iframe src="https://turbowarp.org/919263893?size=640x360&limitless&interpolate&hqpen&clones=Infinity" width="640" height="360"></iframe>
+<section id="home">
+<h2>Welcome to Scratch</h2>
+<p>Scratch is a free programming language and online community where you can create your own interactive stories, games, and animations.</p>
+</section>
+<section id="create">
+<h2>Create</h2>
+<p>Start creating your own projects using our easy-to-use tools and tutorials.</p>
+</section>
+<section id="explore">
+<h2>Explore</h2>
+<p>Discover projects created by other users and get inspired.</p>
+</section>
+<section id="about">
+<h2>About</h2>
+<p>Learn more about Scratch and our mission to help kids learn to code.</p>
+</section>
 </main>
+<footer>
+<p>&copy; 2024 Scratch. All rights reserved.</p>
+</footer>
 </body>
 </html>
