--- a/index.html
+++ b/index.html
@@ -3,82 +3,126 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Scratch</title>
+<title>YouTube Clone</title>
 <style>
 body {
 font-family: Arial, sans-serif;
 margin: 0;
 padding: 0;
-background-color: #f0f0f0;
+background-color: #f9f9f9;
 }
 header {
-background-color: #4d97ff;
-color: #fff;
-padding: 20px;
-text-align: center;
-}
-nav {
-display: flex;
-justify-content: center;
-background-color: #3b82e3;
-padding: 10px 0;
-}
-nav a {
+background-color: #ff0000;
 color: #fff;
 padding: 10px 20px;
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+header h1 {
+margin: 0;
+font-size: 24px;
+}
+header input[type="text"] {
+width: 50%;
+padding: 5px;
+border: none;
+border-radius: 3px;
+}
+header button {
+padding: 5px 10px;
+border: none;
+border-radius: 3px;
+background-color: #fff;
+color: #ff0000;
+cursor: pointer;
+}
+header button:hover {
+background-color: #f1f1f1;
+}
+nav {
+background-color: #fff;
+padding: 10px 20px;
+display: flex;
+justify-content: space-around;
+border-bottom: 1px solid #ddd;
+}
+nav a {
+color: #000;
 text-decoration: none;
-text-align: center;
+padding: 10px;
 }
 nav a:hover {
-background-color: #2a6bbf;
+background-color: #f1f1f1;
+border-radius: 3px;
 }
 main {
 padding: 20px;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
 }
-section {
-margin-bottom: 20px;
+.video-card {
+background-color: #fff;
+border: 1px solid #ddd;
+border-radius: 3px;
+width: 300px;
+margin: 10px;
+padding: 10px;
+box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+.video-card img {
+width: 100%;
+border-radius: 3px;
+}
+.video-card h3 {
+font-size: 18px;
+margin: 10px 0 5px;
+}
+.video-card p {
+color: #555;
+font-size: 14px;
 }
 footer {
-background-color: #4d97ff;
-color: #fff;
+background-color: #f1f1f1;
+color: #555;
 text-align: center;
 padding: 10px;
-position: fixed;
-width: 100%;
-bottom: 0;
+border-top: 1px solid #ddd;
 }
 </style>
 </head>
 <body>
 <header>
-<h1>Scratch</h1>
+<h1>YouTube</h1>
+<input type="text" placeholder="Search">
+<button>Search</button>
 </header>
 <nav>
 <a href="#home">Home</a>
-<a href="#create">Create</a>
-<a href="#explore">Explore</a>
-<a href="#about">About</a>
+<a href="#trending">Trending</a>
+<a href="#subscriptions">Subscriptions</a>
+<a href="#library">Library</a>
 </nav>
 <main>
-<section id="home">
-<h2>Welcome to Scratch</h2>
-<p>Scratch is a free programming language and online community where you can create your own interactive stories, games, and animations.</p>
-</section>
-<section id="create">
-<h2>Create</h2>
-<p>Start creating your own projects using our easy-to-use tools and tutorials.</p>
-</section>
-<section id="explore">
-<h2>Explore</h2>
-<p>Discover projects created by other users and get inspired.</p>
-</section>
-<section id="about">
-<h2>About</h2>
-<p>Learn more about Scratch and our mission to help kids learn to code.</p>
-</section>
+<div class="video-card">
+<img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
+<h3>Video Title</h3>
+<p>Channel Name</p>
+</div>
+<div class="video-card"><img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
+<h3>Video Title</h3>
+<p>Channel Name</p>
+</div>
+<div class="video-card">
+<img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
+<h3>Video Title</h3>
+<p>Channel Name</p>
+</div>
+<!-- Add more video cards as needed -->
 </main>
 <footer>
-<p>&copy; 2024 Scratch. All rights reserved.</p>
+<p>&copy; 2024 YouTube Clone. All rights reserved.</p>
 </footer>
 </body>
 </html>
