--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>YouTube Clone</title>
+<title>Дети Онлайн</title>
 <style>
 body {
 font-family: Arial, sans-serif;
@@ -12,49 +12,25 @@ padding: 0;
 background-color: #f9f9f9;
 }
 header {
-background-color: #ff0000;
-color: #fff;
-padding: 10px 20px;
-display: flex;
-align-items: center;
-justify-content: space-between;
-}
-header h1 {
-margin: 0;
-font-size: 24px;
-}
-header input[type="text"] {
-width: 50%;
-padding: 5px;
-border: none;
-border-radius: 3px;
-}
-header button {
-padding: 5px 10px;
-border: none;
-border-radius: 3px;
-background-color: #fff;
-color: #ff0000;
-cursor: pointer;
-}
-header button:hover {
-background-color: #f1f1f1;
+background-color: #ffcc00;
+color: #333;
+padding: 20px;
+text-align: center;
 }
 nav {
-background-color: #fff;
-padding: 10px 20px;
+background-color: #ff9900;
+padding: 10px;
 display: flex;
-justify-content: space-around;
-border-bottom: 1px solid #ddd;
+justify-content: center;
 }
 nav a {
-color: #000;
+color: #fff;
+padding: 10px 20px;
 text-decoration: none;
-padding: 10px;
+text-align: center;
 }
 nav a:hover {
-background-color: #f1f1f1;
-border-radius: 3px;
+background-color: #cc7a00;
 }
 main {
 padding: 20px;
@@ -62,30 +38,30 @@ display: flex;
 flex-wrap: wrap;
 justify-content: space-around;
 }
-.video-card {
+.article-card {
 background-color: #fff;
 border: 1px solid #ddd;
-border-radius: 3px;
+border-radius: 5px;
 width: 300px;
 margin: 10px;
 padding: 10px;
 box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
-.video-card img {
+.article-card img {
 width: 100%;
-border-radius: 3px;
+border-radius: 5px;
 }
-.video-card h3 {
+.article-card h3 {
 font-size: 18px;
 margin: 10px 0 5px;
 }
-.video-card p {
+.article-card p {
 color: #555;
 font-size: 14px;
 }
 footer {
-background-color: #f1f1f1;
-color: #555;
+background-color: #ffcc00;
+color: #333;
 text-align: center;
 padding: 10px;
 border-top: 1px solid #ddd;
@@ -94,35 +70,35 @@ border-top: 1px solid #ddd;
 </head>
 <body>
 <header>
-<h1>YouTube</h1>
-<input type="text" placeholder="Search">
-<button>Search</button>
+<h1>Дети Онлайн</h1>
 </header>
 <nav>
-<a href="#home">Home</a>
-<a href="#trending">Trending</a>
-<a href="#subscriptions">Subscriptions</a>
-<a href="#library">Library</a>
+<a href="#home">Главная</a>
+<a href="#games">Игры</a>
+<a href="#videos">Видео</a>
+<a href="#articles">Статьи</a>
+<a href="#contact">Контакты</a>
 </nav>
 <main>
-<div class="video-card">
-<img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-<h3>Video Title</h3>
-<p>Channel Name</p>
+<div class="article-card">
+<img src="https://via.placeholder.com/300x200" alt="Article Image">
+<h3>Название статьи</h3>
+<p>Краткое описание статьи.</p>
 </div>
-<div class="video-card"><img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-<h3>Video Title</h3>
-<p>Channel Name</p>
+<div class="article-card">
+<img src="https://via.placeholder.com/300x200" alt="Article Image">
+<h3>Название статьи</h3>
+<p>Краткое описание статьи.</p>
 </div>
-<div class="video-card">
-<img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-<h3>Video Title</h3>
-<p>Channel Name</p>
+<div class="article-card">
+<img src="https://via.placeholder.com/300x200" alt="Article Image">
+<h3>Название статьи</h3>
+<p>Краткое описание статьи.</p>
 </div>
-<!-- Add more video cards as needed -->
+<!-- Add more article cards as needed -->
 </main>
 <footer>
-<p>&copy; 2024 YouTube Clone. All rights reserved.</p>
+<p>&copy; 2024 Дети Онлайн. Все права защищены.</p>
 </footer>
 </body>
 </html>
