--- a/index.html
+++ b/index.html
@@ -1,104 +1,2 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Дети Онлайн</title>
-<style>
-body {
-font-family: Arial, sans-serif;
-margin: 0;
-padding: 0;
-background-color: #f9f9f9;
-}
-header {
-background-color: #ffcc00;
-color: #333;
-padding: 20px;
-text-align: center;
-}
-nav {
-background-color: #ff9900;
-padding: 10px;
-display: flex;
-justify-content: center;
-}
-nav a {
-color: #fff;
-padding: 10px 20px;
-text-decoration: none;
-text-align: center;
-}
-nav a:hover {
-background-color: #cc7a00;
-}
-main {
-padding: 20px;
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
-}
-.article-card {
-background-color: #fff;
-border: 1px solid #ddd;
-border-radius: 5px;
-width: 300px;
-margin: 10px;
-padding: 10px;
-box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-.article-card img {
-width: 100%;
-border-radius: 5px;
-}
-.article-card h3 {
-font-size: 18px;
-margin: 10px 0 5px;
-}
-.article-card p {
-color: #555;
-font-size: 14px;
-}
-footer {
-background-color: #ffcc00;
-color: #333;
-text-align: center;
-padding: 10px;
-border-top: 1px solid #ddd;
-}
-</style>
-</head>
-<body>
-<header>
-<h1>Дети Онлайн</h1>
-</header>
-<nav>
-<a href="#home">Главная</a>
-<a href="#games">Игры</a>
-<a href="#videos">Видео</a>
-<a href="#articles">Статьи</a>
-<a href="#contact">Контакты</a>
-</nav>
-<main>
-<div class="article-card">
-<img src="https://via.placeholder.com/300x200" alt="Article Image">
-<h3>Название статьи</h3>
-<p>Краткое описание статьи.</p>
-</div>
-<div class="article-card">
-<img src="https://via.placeholder.com/300x200" alt="Article Image">
-<h3>Название статьи</h3>
-<p>Краткое описание статьи.</p>
-</div>
-<div class="article-card">
-<img src="https://via.placeholder.com/300x200" alt="Article Image">
-<h3>Название статьи</h3>
-<p>Краткое описание статьи.</p>
-</div>
-<!-- Add more article cards as needed -->
-</main>
-<footer>
-<p>&copy; 2024 Дети Онлайн. Все права защищены.</p>
-</footer>
-</body>
-</html>
+<iframe src="https://discord.com/widget?id=1219281178947879034&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<iframe src="https://discord.com/widget?id=1252222692329914388&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
