--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Discord Clone</title>
+<title>My Discord Clone</title>
 <style>
 body {
 font-family: Arial, sans-serif;
@@ -119,7 +119,8 @@ background-color: #5b6eae;
 </head>
 <body>
 <div class="sidebar">
-<img src="https://via.placeholder.com/50" alt="Server Icon"><img src="https://via.placeholder.com/50" alt="Server Icon">
+<img src="https://via.placeholder.com/50" alt="Server Icon">
+<img src="https://via.placeholder.com/50" alt="Server Icon">
 <img src="https://via.placeholder.com/50" alt="Server Icon">
 <!-- Add more server icons as needed -->
 </div>
