--- a/index.html
+++ b/index.html
@@ -1,2 +1,57 @@
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Battle Bound ☁</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body style="background-color: #141414; color: white;">
+    <div class="topnav">
+        <h1>Battle Bound</h1>
+        <a class="active" href="index.html">Главная</a>
+    </div>
+    <center>
+    <img src="img/img002.webp" alt="Ошибка загрузки изображения или вы слепой">
+    <br>
+    <br>
+    <div class="left-align">
+    <p>Игра Battle Bound ☁  изначально  создавалась  англиским разработчиком. Мы же создаем к уже  имеешишейся игре новые карты и дополнения.</p>
+    <p>К сожаленью оригинальную игру удалили.</p>
+    <br>
+    <br>
+    <p>Разработчики: </p>
+    <p>yaromir1212 </p> 
+    <p>nail_tutor8341 </p>
+    <p>hunt850 </p>
+    <p>myxa_a</p>
+    <br>
+    <br>
+    </div>
+    <br>
+    <img src="img/IMG003.webp" alt="Error!">
+    <br>
+    <br>
+    <a href="https://turbowarp.org/919263893/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity"> Оригинальная игра</a>
+    <br>
+    <br>
+    <a href="page2/index.html">Дркгие карты</a>
+    <br>
+    <br>
+    <br>
+    <!--
+    <div class="carousel">
+        <div class="carousel-inner">
+          <img src="img1.jpg" alt="Image 1" class="carousel-item">
+          <img src="img2.jpg" alt="Image 2" class="carousel-item">
+          <img src="img3.jpg" alt="Image 3" class="carousel-item">
+        </div>
+        <button class="carousel-control prev" onclick="prevSlide()">&#10094;</button>
+        <button class="carousel-control next" onclick="nextSlide()">&#10095;</button>
+      </div>
+      <script src="script.js"></script>
+    <br>
+    </center>
+    -->
+</body>
+</html>
