--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
     <a href="https://turbowarp.org/919263893/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity"> Оригинальная игра</a>
     <br>
     <br>
-    <a href="page2/index.html">Дркгие карты</a>
+    <a href="https://turbowarp.org/949831390/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">Полиция против браконьеров</a>
+    <br>
+    <br>
+    <br>
+    <a href="https://turbowarp.org/943072248/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">Битва Морозов</a> 
+    <br>
+    <br>
+    <br>
+    <iframe src="https://discord.com/widget?id=1252222692329914388&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     <br>
     <br>
     <br>
