--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body style="background-color: #141414; color: white;">
     <center>
     <div class="topnav">
-        <h1>Battle Bound</h1>
+        <h1>Battle Bound ☁</h1>
     </div>
 
     <img src="img/img002.webp" alt="Ошибка загрузки изображения или вы слепой">
     <br>
     <br>
     <div class="left-align">
-    <p>Игра Battle Bound ☁  изначально  создавалась  англиским разработчиком. Мы же создаем к уже  имеешишейся игре новые карты и дополнения.</p>
+    <p>Игра Battle Bound ☁  изначально  создавалась  англиским разработчиком. Мы же создаем к уже  имеешишейся игре новые карты и дополнения. МЫ ещё дети не судите нас сторого!</p>
     <p>К сожаленью оригинальную игру удалили.</p>
     <br>
     <br>
