--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <br>
     <br>
     <br>
+    <div class="fixed-bottom-right">
     <iframe src="https://discord.com/widget?id=1252222692329914388&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" class"fixed-bottom-right"></iframe>
+    </div>
     <br>
     <br>
     <br>
