--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br>
     <br>
     <div class="left-align">
-    <p>Игра Battle Bound ☁  изначально  создавалась  англиским разработчиком. Мы же создаем к уже  имеешишейся игре новые карты и дополнения. МЫ ещё дети не судите нас сторого!</p>
+    <p>Игра Battle Bound ☁  изначально  создавалась  англиским разработчиком. Мы же создаем к уже  имеешишейся игре новые карты и дополнения.</p>
     <p>К сожаленью оригинальную игру удалили.</p>
     <br>
     <br>
