--- a/index.html
+++ b/index.html
@@ -29,18 +29,35 @@
     <img src="img/IMG003.webp" alt="Error!">
     <br>
     <br>
-    <a href="https://turbowarp.org/919263893/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity"> Оригинальная игра</a>
+    <br>
+    <a> ИГРЫ </a>
     <br>
     <br>
-    <a href="https://turbowarp.org/949831390/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">Полиция против браконьеров</a>
+    <br>
+    <br>
+    <a>  ПЕРЕВЕДЕННАЯ ИГРА (оригинальная) </a>
+    <br>
+    <a href="https://turbowarp.org/919263893/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity"> Играть в браузере </a>
     <br>
     <br>
     <br>
-    <a href="https://turbowarp.org/943072248/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">Битва Морозов</a> 
+    <br>
+    <a>Полиция против браконьеров</a>
+    <br>
+    <br>
+    <a href="https://turbowarp.org/949831390/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity "> Играть в браузере </a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a>Битва Морозов</a> 
+    <a href="https://turbowarp.org/943072248/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity "> Играть в браузере </a> 
     <br>
     <br>
     <br>
     <div class="fixed-bottom-right">
+    <br>
+    <br>
     <iframe src="https://discord.com/widget?id=1252222692329914388&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" class"fixed-bottom-right"></iframe>
     </div>
     <br>
