--- a/index.html
+++ b/index.html
@@ -30,38 +30,16 @@
     <br>
     <br>
     <br>
-    <a> ИГРЫ </a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a>  ПЕРЕВЕДЕННАЯ ИГРА (оригинальная) </a>
-    <br>
-    <br>
-    <a href="https://turbowarp.org/919263893/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity"> Играть в браузере </a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a>Полиция против браконьеров</a>
-    <br>
-    <br>
-    <a href="https://turbowarp.org/949831390/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity "> Играть в браузере </a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a>Битва Морозов</a> 
-    <br>
-    <br>
-    <a href="https://turbowarp.org/943072248/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity "> Играть в браузере </a> 
-    <br>
-    <br>
-    <br>
+    <h2>Игры </h2>
+    <ul>
+    <li><a href="https://turbowarp.org/919263893/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity">ПЕРЕВЕДЕННАЯ ИГРА (оригинальная)</a></li>
+    <li><a href="https://turbowarp.org/949831390/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">Полиция против браконьеров</a></li>
+    <li></li><a href="https://turbowarp.org/943072248/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">Битва морозов</a> </li>
+    </ul>
     <div class="fixed-bottom-right">
     <br>
     <br>
-    <iframe src="https://discord.com/widget?id=1252222692329914388&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" class"fixed-bottom-right"></iframe>
+    <iframe src="https://discord.com/widget?id=1252222692329914388&theme=dark" width="250" height="400" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" class"fixed-bottom-right"></iframe>
     </div>
     <br>
     <br>
