--- a/index.html
+++ b/index.html
@@ -30,11 +30,29 @@
     <br>
     <br>
     <br>
-    <h2>Игры </h2>
+    <h2>Игры</h2>
     <ul>
-    <li><a href="https://turbowarp.org/919263893/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity">ПЕРЕВЕДЕННАЯ ИГРА (оригинальная)</a></li>
-    <li><a href="https://turbowarp.org/949831390/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">Полиция против браконьеров</a></li>
-    <li></li><a href="https://turbowarp.org/943072248/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">Битва морозов</a> </li>
+    <br>
+    <br>
+    <br>
+    <p>ПЕРЕВЕДЕННАЯ ИГРА (оригинальная)</p>
+    <br>
+    <li><a href="https://turbowarp.org/919263893/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity">играть в браузере</a></li>
+    <br>
+    <br>
+    <br>
+    <p>Полиция против браконьеров</p>
+    <br>
+    <li><a href="https://turbowarp.org/949831390/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">играть в браузере</a></li>
+    <br>
+    <br>
+    <br>
+    <p>Битва морозов</p>
+    <br>
+    <li></li><a href="https://turbowarp.org/943072248/fullscreen?size=640x360&limitless&interpolate&hqpen&clones=Infinity ">играть в браузере</a> </li>
+    <br>
+    <br>
+    <br>
     </ul>
     <div class="fixed-bottom-right">
     <br>
