--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <img src="img/img002.webp" alt="Ошибка загрузки изображения или вы слепой">
     <br>
+    <p>Добро пожаловать в Battle Bound ☁️ — захватывающую многопользовательскую аркадную игру, где вы сражаетесь с друзьями и врагами в эпических битвах!</p>
+    <p>Играйте за стикмена, избегайте атак и уничтожайте противников, чтобы стать лучшим игроком в игре.</p>
     <br>
     <div class="left-align">
     <p>Игра Battle Bound ☁  изначально  создавалась  англиским разработчиком. Мы же создаем к уже  имеешишейся игре новые карты и дополнения.</p>
